# CPU-Scheduler

./: .gitignore  CMakeLists.txt  README.md
First-Come-First-Serve/: FCFS.cpp  FCFS.hpp
GUI/: LiveMode.cpp  LiveMode.hpp  LiveMode.ui  NonLiveMode.cpp  NonLiveMode.hpp  NonLiveMode.ui  main.cpp  widget.cpp  widget.hpp  widget.ui
Live-Scheduling-Manager/: SchedulingManager.cpp  SchedulingManager.hpp
Priority-Scheduler/: Non_Preemptive_priority.cpp  Non_Preemptive_priority.hpp  Preemptive_priority.cpp  Preemptive_priority.hpp
Process/: Process.cpp  Process.hpp
Round-Robin/: Round_Robin.cpp  Round_Robin.hpp
Shortest-Job-First/: Non_Preemptive_SJF.cpp  Non_Preemptive_SJF.hpp  Preemptive_SJF.cpp  Preemptive_SJF.hpp
